--- a/Lab_Management.v1/src/main/resources/templates/admin/lab-form.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/lab-form.html
@@ -65,8 +65,11 @@
                 </div>
                 <div class="form-group col-6">
                     <label for="managingUnit">Chủ quản:</label>
-                    <input type="text" class="form-control" id="managingUnit" name="managingUnit" required
-                           th:placeholder="'Bộ môn Công nghệ phần mềm'">
+                    <select name="managingUnit" id="managingUnit" class="form-control" >
+                        <option th:each="managingUnit : ${managingUnits}"
+                                th:value="${managingUnit.departmentName}"
+                                th:text="${managingUnit.departmentName}"></option>
+                    </select>
                 </div>
                 <div class="col-12 d-flex">
                     <button type="submit" class="btn btn-primary" style="margin: auto; padding: 2em">Thêm</button>
