Fix bug inventory all lab and fix inventory equip

--- a/Lab_Management.v1/src/main/resources/templates/admin/inventory-manager-equi.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/inventory-manager-equi.html
@@ -1,18 +1,116 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org">
-<!--<html xmlns:th="http://www.springframework.org/schema/data/jaxb">-->
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thyme leaf-extras-springsecurity5"
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Phone</title>
-    <!-- Link to Bootstrap CSS for styling -->
+    <title>Quản lý phòng</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/base2.min.css}">
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-
 </head>
-<body>
+<body class="scroll-container">
+
+<!--<inventory-equi>&lt;!&ndash;<div th:replace="admin/templateAdmin.html :: header-admin"></div>&ndash;&gt;
+    <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;" th:text="'Danh sách thiết bị '"><span th:if="${#request.requestURI == '/Lab/admin/Equipment'}">Chưa được sử dụng</span> </h1>
+    <h1 style=" text-align: center; font-size: 2em" th:text="'Số lượng: ' + ${#lists.size(allEquipment)}"></h1>
+    <br>
+    <div class="row">
+        <div class="col-12 d-flex justify-content-center mb-5" sec:authorize="hasRole('ROLE_ADMIN')">
+            <a href="/Lab/admin/Equipment/add">
+                <button type="button" class="btn btn-primary font-bold font-size-xlg">Thêm Thiết bị</button>
+            </a>
+        </div>
+        <br>
+        &lt;!&ndash;<div class="col-6 d-flex justify-content-center mb-5">
+            <a href="/Lab/admin/ExportEquipments">
+                <button type="button" class="btn btn-primary font-bold font-size-xlg">Tài về danh sách</button>
+            </a>
+        </div>&ndash;&gt;
+    </div>
+
+
+    <div class="main-card mb-3 card">
+        <div class="card-body">
+            <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Tên máy</th>
+                        <th>Số lượng</th>
+                        <th>Máy qua sửa chữa</th>
+                        <th>Mô tả</th>
+                        <th>Thao tác</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="equi, iter : ${allEquipment}">
+                        <td th:text="${equi.getName}"></td>
+                        <td th:text="${#lists.size(equi.getEquipmentSerieList)}"></td>
+                        <td th:if="${#lists.size(equi.getEquipmentSerieFixedList) == 0}" class="d-flex justify-content-center align-content-center">
+                            <i class="fa fa-times text-danger"></i></td>
+                        <td th:unless="${#lists.size(equi.getEquipmentSerieFixedList) == 0}" class="d-flex justify-content-center align-content-center">
+                            <i class="fa fa-check text-success"></i></td>
+                        <td th:text="${equi.description}"></td>
+                        <td>
+                            <div class="d-flex" style="display: flex; justify-content: center; align-items: center;">
+                                <th:block th:if="${#request.requestURI == '/Lab/admin/Equipment'}">
+                                    <form th:action="@{'/Lab/admin/Equipment/showFormForUpdate/' + ${equi.getId}}" method="get">
+                                        <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
+                                    </form>
+                                    <form sec:authorize="hasRole('ROLE_ADMIN')"
+                                          th:action="@{'/Lab//admin/Equipment/delete/' + ${equi.getId}}" method="POST">
+                                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa?')">
+                                            Xóa
+                                        </button>
+                                    </form>
+                                </th:block>
+                                <th:block th:if="${#request.requestURI == '/Lab/admin/AllEquipment'}" sec:authorize="hasRole('ROLE_ADMIN')">
+                                    <form th:action="@{'/Lab/admin/AllEquipment/showAll/' + ${equi.getId}}" method="get">
+                                        <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
+                                    </form>
+                                </th:block>
+                                <th:block th:if="${#request.requestURI == '/Lab/admin/AllEquipment'}"  sec:authorize="hasRole('ROLE_MANAGER')">
+                                    <form th:action="@{'/Lab/admin/AllEquipment/showForManager/' + ${equi.getId}}" method="get">
+                                        <button type="submit" class="btn btn-info btn-sm mr-1">Chi tiết</button>
+                                    </form>
+                                </th:block>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th>Tên máy</th>
+                    <th>Số lượng</th>
+                    <th>Máy qua sửa chữa</th>
+                    <th>Mô tả</th>
+                    <th>Thao tác</th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    &lt;!&ndash;Phải load jquery trước khi load bootstrap js&ndash;&gt;
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div style="margin: 20px">
+        &lt;!&ndash; Add a Logout button &ndash;&gt;
+        <form action="#" th:action="@{/logout}" method="POST">
+            <input type="submit" value="Logout" class="btn btn-outline-primary mt-2"/>
+        </form>
+        &lt;!&ndash;<div sec:authorize="isAuthenticated" style="color: red"> Authenticated as <span sec:authentication=""></span></div>&ndash;&gt;
+    </div>
+    &lt;!&ndash;CORE&ndash;&gt;
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/metismenu"></script>
+    <script th:src="@{/js/app.js}"></script>
+    <script th:src="@{/js/demo.js}"></script>
+</inventory-equi>-->
+
 <inventory-lab-readOnly>
     <!--<div th:replace="admin/headerAdmin :: header-admin"></div>-->
     <style>p{margin: unset}</style>
@@ -164,11 +262,99 @@
                     <span class="my-4 font-weight-bold">Xem tất cả</span>
                 </div>
             </div>
+            <!--<div class="row justify-content-center align-content-center">-->
             <button type="submit" class="form-control btn-primary m-4 col-3 align-self-center">Xem</button>
+            <!--</div>-->
         </div>
     </form>
 
-    <th:block th:each="inventoryResult : ${inventoryResults}">
+    <div class="main-card mb-3 card">
+        <div class="card-body">
+            <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th>STT</th>
+                    <th>Tên Trang bị</th>
+                    <th>Đơn vị tính</th>
+                    <th>Seri/Mã</th>
+                    <th>Phân cấp</th>
+                    <th>Năm sử dụng</th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year - 1}"></span></th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year}"></span></th>
+                    <th>Tăng</th>
+                    <th>Giảm</th>
+                    <th>Lý do</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="equipmentLab, iter : ${equipmentLabDTOs}">
+                    <td th:text="${iter.index + 1}"></td>
+                    <td th:text="${equipmentLab.getEquipment.getName}"></td>
+                    <td th:text="${equipmentLab.equipment.getUnit}"></td>
+                    <td>
+                        <th:block th:each="seri : ${equipmentLab.equipmentSerieList}">
+                            <p th:text="${seri}"></p>
+                        </th:block>
+                    </td>
+                    <td>
+                        <th:block th:each="level : ${equipmentLab.levels}">
+                            <p th:text="${level}"></p>
+                        </th:block>
+                    </td>
+                    <td>
+                        <th:block th:each="usingdate : ${equipmentLab.usingdates}">
+                            <p th:text="${usingdate}"></p>
+                        </th:block>
+                    </td>
+                    <td>
+                        <!--<div th:if="${#lists.size(inventoryResult.inventoryCompares)!=0}" >
+                            <span th:text="${inventoryResult.inventoryCompares[iter.index].lastYear}"></span>
+                        </div>-->
+                    </td>
+                    <td>
+                        <!--<div th:if="${#lists.size(inventoryResult.inventoryCompares)!=0}" >
+                            <span th:text="${inventoryResult.inventoryCompares[iter.index].thisYear}"></span>
+                        </div>
+                        <div th:unless="${#lists.size(inventoryResult.inventoryCompares)!=0}" >
+                            <span th:text="${#lists.size(equipmentLab.equipmentSerieList)}"></span>
+                        </div>-->
+                    </td>
+                    <td>
+                        <!--<div th:if="${#lists.size(inventoryResult.inventoryCompares)!=0}" >
+                                <span th:class="${inventoryResult.inventoryCompares[iter.index].increase != 0} ? 'text-success font-weight-bold'"
+                                      th:text="${inventoryResult.inventoryCompares[iter.index].increase}"></span>
+                        </div>-->
+                    </td>
+                    <td class="">
+                        <!-- <div th:if="${#lists.size(inventoryResult.inventoryCompares)!=0}" >
+                                 <span th:class="${inventoryResult.inventoryCompares[iter.index].reduce != 0} ? 'text-danger font-weight-bold'"
+                                       th:text="${inventoryResult.inventoryCompares[iter.index].reduce}"></span>
+                         </div>-->
+                    </td>
+                    <td>
+                        <!--<textarea name="note" class="form-control" cols="10" rows="2" placeholder="Ghí chú lý do"></textarea>-->
+                    </td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th>STT</th>
+                    <th>Tên Trang bị</th>
+                    <th>Đơn vị tính</th>
+                    <th>Seri/Mã</th>
+                    <th>Phân cấp</th>
+                    <th>Năm sử dụng</th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year - 1}"></span></th>
+                    <th>Thực lực 0 giờ <br> <span th:text="'01/01/' + ${year}"></span></th>
+                    <th>Tăng</th>
+                    <th>Giảm</th>
+                    <th>Lý do</th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+    <!--<th:block th:each="inventoryResult : ${inventoryResults}">
         <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;">=========================================================</h1>
         <style>p{margin: unset}</style>
         <h1 style="margin-top: 50px; text-align: center;text-transform: uppercase;">danh sách Kiểm kê</h1>
@@ -176,9 +362,9 @@
         <h2 style="text-align: center;" class="text-primary text-uppercase" th:text="${inventoryResult.labDTO.getManagingUnit}"></h2>
         <br>
 
-        <!--<a th:href="'/Lab/admin/getInventory/'+${labDTO.getId}">
+        &lt;!&ndash;<a th:href="'/Lab/admin/getInventory/'+${labDTO.getId}">
             <button style="text-align: center;" class="form-control btn-success text-primary text-uppercase m-4"> Get </button>
-        </a>-->
+        </a>&ndash;&gt;
         <div class="main-card mb-3 card">
             <div class="card-body">
                 <table style="width: 100%;" id="example" class="table table-hover table-striped table-bordered">
@@ -266,7 +452,7 @@
             </div>
         </div>
 
-        <!-- Link to Bootstrap JS and jQuery -->
+        &lt;!&ndash; Link to Bootstrap JS and jQuery &ndash;&gt;
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -280,8 +466,7 @@
                 }
             }*/
         </script>
-    </th:block>
+    </th:block>-->
 </inventory-AllLab-readOnly>
-
 </body>
 </html>
