--- a/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/templateAdmin.html
@@ -1234,6 +1234,12 @@
                     <div th:replace="admin/inventory-manager.html :: inventory-manager"></div>
                 </div>
 
+
+                <div th:if="${#strings.contains(#request.requestURI, '/Lab/admin/Showinventory/Equipment')}" class="app-main__inner">
+                    <div th:replace="admin/inventory-manager-equi.html :: inventory-AllLab-readOnly"></div>
+                    <!--<div th:replace="admin/inventory-manager-equi.html :: inventory-equi"></div>-->
+                </div>
+
                 <div th:if="${#strings.contains(#request.requestURI, '/Lab/admin/room/showinventory/')
                 || #strings.contains(#request.requestURI, 'Lab/admin/room/showinventoryForyear/')}" class="app-main__inner">
                     <div th:replace="admin/inventory-lab-readOnly.html :: inventory-lab-readOnly"></div>
